planner form styling

--- a/planner_summary.html
+++ b/planner_summary.html
@@ -46,7 +46,7 @@
 
   <!-- Start content here -->
     <div class="container">
-          <h1 class="page-title">My Projects</h1>
+          <h1 class="page-title">My Wedding Projects</h1>
     </div>
     <section class="main">
       <div class="container">
@@ -55,14 +55,14 @@
           <form class="form-inline pull-right">
             <div class="form-group">
             <label for="exampleInputName2" class="form__label">Filter by:</label>
-            <select class="form-control" id="exampleInputName2">
+            <select class="form-control filter" id="exampleInputName2">
               <option>Status</option>
               <option>Category</option>
             </select>
           </div>
           <div class="form-group">
             <label for="exampleInputEmail2" class="form__label">Sort by:</label>
-            <select class="form-control" id="exampleInputName2">
+            <select class="form-control filter" id="exampleInputName2">
               <option>New</option>
               <option>Due Date</option>
               <option>Number of Bids</option>
@@ -83,17 +83,17 @@
           <div class="panel-heading">
 
             <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" href="#collapseOne">
-                  My Open Projects
-                </a>
+                <a class="accordion-toggle c-grey-dk" data-toggle="collapse" href="#collapseOne">
+                  Open Projects
+                </a></h4>
                <div class="media">
                   <div class="media-left">
                       <img src="http://placehold.it/75x75" class="">
                   </div>
                   <div class="media-body align-m">
-                     <a href="planner_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Wedding Favors</a><span class="pull-right">3 Bids</span></h4>
-                    <p><span class="font-t-u font-w-2 small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 4/16/2016 </p>
-                    <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseDetail">More details</a></p>
+                     <a href="planner_project_detail.html"><h4 class="media-heading font-w-5">Wedding Favors</a><span class="bids">3 Bids</span></h4>
+                    <p><span class="font-t-u small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u small">No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u small">Due By</span>: 4/16/2016 </p>
+                    <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
                   </div>
               </div>
             <div class="media">
@@ -101,9 +101,9 @@
                    <img src="http://placehold.it/75x75" class="">
                </div>
                <div class="media-body align-m">
-                  <a href="planner_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Invitations</a><span class="pull-right">1 Bid</span></h4>
-                 <p><span class="font-t-u font-w-2 small">Category</span>: Paper Goods <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $50 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 25 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 4/1/2016
-                 <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseDetail">More details</a></p>
+                  <a href="planner_project_detail.html"><h4 class="media-heading font-w-5">Invitations</a><span class="bids">1 Bid</span></h4>
+                 <p><span class="font-t-u small">Category</span>: Paper Goods <span class="v-divider">|</span> <span class="font-t-u small">Budget</span>: $50 <span class="v-divider">|</span> <span class="font-t-u small">No. of Items</span>: 25 <span class="v-divider">|</span> <span class="font-t-u small">Due By</span>: 4/1/2016
+                 <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
                </div>
              </div>
              <div class="media">
@@ -111,9 +111,9 @@
                      <img src="http://placehold.it/75x75" class="">
                  </div>
                  <div class="media-body align-m">
-                    <a href="planner_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Bridal Party Bouquets</a><span class="pull-right">10 Bids</span></h4>
-                   <p><span class="font-t-u font-w-2 small">Category</span>: Flowers <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 10 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 4/18/2016
-                   <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseDetail">More details</a></p>
+                    <a href="planner_project_detail.html"><h4 class="media-heading font-w-5">Bridal Party Bouquets</a><span class="bids">10 Bids</span></h4>
+                   <p><span class="font-t-u small">Category</span>: Flowers <span class="v-divider">|</span> <span class="font-t-u  small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u small">No. of Items</span>: 10 <span class="v-divider">|</span> <span class="font-t-u small">Due By</span>: 4/18/2016
+                  <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
                  </div>
                 </h4>
               </div>
@@ -124,11 +124,12 @@
             </div>
           </div>
         </div>
-        <div class="panel panel-default">
+        <hr>
+        <div class="panel panel-default mt-40 mb-40">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a class="accordion-toggle" data-toggle="collapse" href="#collapseTwo">
-                My Accepted Projects
+              <a class="accordion-toggle c-grey-dk" data-toggle="collapse" href="#collapseTwo">
+                Accepted Projects
               </a>
             </h4>
           </div>
@@ -138,11 +139,12 @@
             </div>
           </div>
         </div>
+        <hr>
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a class="accordion-toggle" data-toggle="collapse" href="#collapseThree">
-                My Completed Projects
+              <a class="accordion-toggle c-grey-dk" data-toggle="collapse" href="#collapseThree">
+                Completed Projects
               </a>
             </h4>
           </div>
@@ -158,6 +160,7 @@
   </div>
 
 </section>
+<hr class="mt-50 mb-0">
   <!-- End Content Here-->
 <footer id="footer">
   <div class="container">
