--- a/planner_summary.html
+++ b/planner_summary.html
@@ -88,31 +88,31 @@
                 </a></h4>
                <div class="media">
                   <div class="media-left">
-                      <img src="http://placehold.it/75x75" class="">
+                      <img src="assets/planner-summary/open-projects-1.png" class="media-sq-img-75">
                   </div>
                   <div class="media-body align-m">
                      <a href="planner_project_detail.html"><h4 class="media-heading font-w-5">Wedding Favors</a><span class="bids">3 Bids</span></h4>
-                    <p><span class="font-t-u small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u small">No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u small">Due By</span>: 4/16/2016 </p>
+                    <p><span class="font-t-u small"><i class="fa fa-archive"></i> Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u small"><i class="fa fa-usd"></i> Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u small"><i class="fa fa-gift"></i> No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u small"><i class="fa fa-calendar"></i> Due By</span>: 4/16/2016 </p>
                     <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
                   </div>
               </div>
             <div class="media">
                <div class="media-left">
-                   <img src="http://placehold.it/75x75" class="">
+                   <img src="assets/planner-summary/open-projects-2.png" class="media-sq-img-75">
                </div>
                <div class="media-body align-m">
                   <a href="planner_project_detail.html"><h4 class="media-heading font-w-5">Invitations</a><span class="bids">1 Bid</span></h4>
-                 <p><span class="font-t-u small">Category</span>: Paper Goods <span class="v-divider">|</span> <span class="font-t-u small">Budget</span>: $50 <span class="v-divider">|</span> <span class="font-t-u small">No. of Items</span>: 25 <span class="v-divider">|</span> <span class="font-t-u small">Due By</span>: 4/1/2016
+                 <p><span class="font-t-u small"><i class="fa fa-archive"></i> Category</span>: Paper Goods <span class="v-divider">|</span> <span class="font-t-u small"><i class="fa fa-usd"></i> Budget</span>: $50 <span class="v-divider">|</span> <span class="font-t-u small"><i class="fa fa-gift"></i> No. of Items</span>: 25 <span class="v-divider">|</span> <span class="font-t-u small"><i class="fa fa-calendar"></i> Due By</span>: 4/1/2016
                  <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
                </div>
              </div>
              <div class="media">
                  <div class="media-left">
-                     <img src="http://placehold.it/75x75" class="">
+                     <img src="assets/planner-summary/open-projects-3.png" class="media-sq-img-75">
                  </div>
                  <div class="media-body align-m">
                     <a href="planner_project_detail.html"><h4 class="media-heading font-w-5">Bridal Party Bouquets</a><span class="bids">10 Bids</span></h4>
-                   <p><span class="font-t-u small">Category</span>: Flowers <span class="v-divider">|</span> <span class="font-t-u  small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u small">No. of Items</span>: 10 <span class="v-divider">|</span> <span class="font-t-u small">Due By</span>: 4/18/2016
+                   <p><span class="font-t-u small"><i class="fa fa-archive"></i> Category</span>: Flowers <span class="v-divider">|</span> <span class="font-t-u  small"><i class="fa fa-usd"></i> Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u small"><i class="fa fa-gift"></i> No. of Items</span>: 10 <span class="v-divider">|</span> <span class="font-t-u small"><i class="fa fa-calendar"></i> Due By</span>: 4/18/2016
                   <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
                  </div>
                 </h4>
@@ -129,7 +129,7 @@
           <div class="panel-heading">
             <h4 class="panel-title">
               <a class="accordion-toggle c-grey-dk" data-toggle="collapse" href="#collapseTwo">
-                Accepted Projects
+                Accepted Projects (0)
               </a>
             </h4>
           </div>
@@ -144,7 +144,7 @@
           <div class="panel-heading">
             <h4 class="panel-title">
               <a class="accordion-toggle c-grey-dk" data-toggle="collapse" href="#collapseThree">
-                Completed Projects
+                Completed Projects (0)
               </a>
             </h4>
           </div>
@@ -162,7 +162,7 @@
 </section>
 <hr class="mt-50 mb-0">
   <!-- End Content Here-->
-<footer id="footer">
+<footer id="footer" class="cream-bg">
   <div class="container">
     <ul class="list-inline social pull-left">
                 <li>
