--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a class="navbar-brand" href="#"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="list-unstyled list-inline pull-right c-white font-w-4">
+          <ul class="list-unstyled list-inline pull-right c-white font-w-6">
           	<li>Sign In</li>
             <li>How It Works</li>
           	<li>Register</li>
@@ -54,8 +54,8 @@ for their big day.</h3>
 		</div>
 	</div>
 </div>
-	<section id="how-it-works" class="mb-50">
-		<div class="container">
+	<section id="how-it-works" class="mb-50 relative">
+		<div class="container relative">
       <span><img src="images/arrow.png" alt="" class="arrow1 arrow"></span>
       <span><img src="images/arrow.png" alt="" class="arrow2 arrow"></span>
 				<h2 class="text-center mb-30">How It Works</h2>
