--- a/open-projects.html
+++ b/open-projects.html
@@ -37,8 +37,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <a class="navbar-brand" href="index.html"><img src="images/logo-sm.png" alt="" class="header__logo"></a>
           <ul class="list-unstyled list-inline pull-right">
-            <li><h6>Sign In</h6></li>
-            <li><h6>Register</h6></li>
+           <li class="c-white font-w-6">Profile</li>
+            <li class="c-white font-w-6">Sign Out</li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -56,7 +56,7 @@
           <form class="form-inline pull-right">
             <div class="form-group">
             <label for="exampleInputName2" class="form__label">Filter by:</label>
-            <select class="form-control" id="exampleInputName2">
+            <select class="form-control filter" id="exampleInputName2">
               <option>Paper goods</option>
               <option>Jewelry</option>
               <option>Flowers</option>
@@ -70,7 +70,7 @@
           </div>
           <div class="form-group">
             <label for="exampleInputEmail2" class="form__label">Sort by:</label>
-            <select class="form-control" id="exampleInputName2">
+            <select class="form-control filter" id="exampleInputName2">
               <option>New</option>
               <option>Budget</option>
             </select>
@@ -88,18 +88,17 @@
         <div class="panel-group" id="accordion">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h4 class="panel-title">
+            <h4 class="panel-title"></h4>
                <div class="media">
                   <div class="media-left">
                     <img src="assets/open-projects/open-projects-1.png" class="media-sq-img-75">
                   </div>
                   <div class="media-body align-m">
-                     <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Alice's Wedding Favors</h4></a>
-                    <p><span class="font-t-u font-w-2 small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 4/16/2016
-                    <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseOne">More details</a></p>
+                     <a href="maker_project_detail.html"><h4 class="media-heading font-w-5">Alice's Wedding Favors</h4></a>
+                    <p><span class="font-t-u small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u small">No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u small">Due By</span>: 4/16/2016</p>
+                    <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
                   </div>
                 </div>
-            </h4>
           </div>
           <div id="collapseOne" class="panel-collapse collapse">
             <div class="panel-body">
@@ -109,18 +108,16 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">
-          <h4 class="panel-title">
              <div class="media">
                 <div class="media-left">
                     <img src="assets/open-projects/open-projects-2.png" class="media-sq-img-75">
                 </div>
                 <div class="media-body align-m">
-                   <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Priya's Invitations</h4></a>
-                  <p><span class="font-t-u font-w-2 small">Category</span>: Paper Goods <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $200 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 50 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 6/27/2016
-                  <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseTwo">More details</a></p>
+                   <a href="maker_project_detail.html"><h4 class="media-heading font-w-5">Priya's Invitations</h4></a>
+                  <p><span class="font-t-u  small">Category</span>: Paper Goods <span class="v-divider">|</span> <span class="font-t-u  small">Budget</span>: $200 <span class="v-divider">|</span> <span class="font-t-u  small">No. of Items</span>: 50 <span class="v-divider">|</span> <span class="font-t-u  small">Due By</span>: 6/27/2016</p>
+                  <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
                 </div>
               </div>
-          </h4>
         </div>
         <div id="collapseTwo" class="panel-collapse collapse">
           <div class="panel-body">
@@ -129,18 +126,16 @@
   </div>
   <div class="panel panel-default">
       <div class="panel-heading">
-        <h4 class="panel-title">
            <div class="media">
               <div class="media-left">
                   <img src="assets/open-projects/open-projects-3.png" class="media-sq-img-75">
               </div>
               <div class="media-body align-m">
-                 <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Tai's Wedding Favors</h4></a>
-                <p><span class="font-t-u font-w-2 small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $200 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 50 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 8/1/2016
-                <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseThree">More details</a></p>
+                 <a href="maker_project_detail.html"><h4 class="media-heading font-w-5">Tai's Wedding Favors</h4></a>
+                <p><span class="font-t-u  small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u  small">Budget</span>: $200 <span class="v-divider">|</span> <span class="font-t-u  small">No. of Items</span>: 50 <span class="v-divider">|</span> <span class="font-t-u  small">Due By</span>: 8/1/2016</p>
+                <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
               </div>
             </div>
-        </h4>
       </div>
       <div id="collapseThree" class="panel-collapse collapse">
         <div class="panel-body">
@@ -149,18 +144,16 @@
 </div>
 <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title">
          <div class="media">
             <div class="media-left">
                 <img src="assets/open-projects/open-projects-4.png" class="media-sq-img-75">
             </div>
             <div class="media-body align-m">
-               <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Alan's Centerpieces</h4></a>
-              <p><span class="font-t-u font-w-2 small">Category</span>: Flowers <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 10 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 12/1/2016
-              <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseFour">More details</a></p>
+               <a href="maker_project_detail.html"><h4 class="media-heading font-w-5">Alan's Centerpieces</h4></a>
+              <p><span class="font-t-u  small">Category</span>: Flowers <span class="v-divider">|</span> <span class="font-t-u  small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u  small">No. of Items</span>: 10 <span class="v-divider">|</span> <span class="font-t-u  small">Due By</span>: 12/1/2016</p>
+             <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
             </div>
           </div>
-      </h4>
     </div>
     <div id="collapseFour" class="panel-collapse collapse">
       <div class="panel-body">
@@ -170,18 +163,16 @@
   </div>
   <div class="panel panel-default">
   <div class="panel-heading">
-    <h4 class="panel-title">
        <div class="media">
           <div class="media-left">
               <img src="assets/open-projects/open-projects-5.png" class="media-sq-img-75">
           </div>
           <div class="media-body align-m">
-             <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Brooklyn's Necklaces</h4></a>
-            <p><span class="font-t-u font-w-2 small">Category</span>: Jewelry <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $80 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 5 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 5/10/2016
-            <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseFive">More details</a></p>
+             <a href="maker_project_detail.html"><h4 class="media-heading font-w-5">Brooklyn's Necklaces</h4></a>
+            <p><span class="font-t-u  small">Category</span>: Jewelry <span class="v-divider">|</span> <span class="font-t-u  small">Budget</span>: $80 <span class="v-divider">|</span> <span class="font-t-u  small">No. of Items</span>: 5 <span class="v-divider">|</span> <span class="font-t-u  small">Due By</span>: 5/10/2016</p>
+            <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
           </div>
         </div>
-    </h4>
   </div>
   <div id="collapseFive" class="panel-collapse collapse">
     <div class="panel-body">
