--- a/maker_project_detail.html
+++ b/maker_project_detail.html
@@ -37,7 +37,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <a class="navbar-brand" href="index.html"><img src="images/logo-sm.png" alt="" class="header__logo"></a>
           <ul class="list-unstyled list-inline pull-right">
-            <li><h6>Profile</h6></li>
+                       <li class="c-white font-w-6">Profile</li>
+            <li class="c-white font-w-6">Sign Out</li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -48,7 +49,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <h5 class="page-title pull-left">Available projects:</h5>
+          <h5 class="page-title pull-left">Open project</h5>
           <h5 class="page-title pull-right"><i class="fa fa-angle-left c-pink-lt"></i>&#09;10 of 300&#09;<i class="fa fa-angle-right c-pink-lt"></i></h5>
         </div>
       </div>
