--- a/planner_form.html
+++ b/planner_form.html
@@ -37,7 +37,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <a class="navbar-brand" href="index.html"><img src="images/logo-sm.png" alt="" class="header__logo"></a>
           <ul class="list-unstyled list-inline pull-right">
-            <li><h6>Profile</h6></li>
+                       <li class="c-white font-w-6">Profile</li>
+            <li class="c-white font-w-6">Sign Out</li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
