--- a/planner_project_detail.html
+++ b/planner_project_detail.html
@@ -37,7 +37,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <a class="navbar-brand" href="index.html"><img src="images/logo-sm.png" alt="" class="header__logo"></a>
           <ul class="list-unstyled list-inline pull-right">
-          	<li><h6>Profile</h6></li>
+           <li class="c-white font-w-6">Profile</li>
+            <li class="c-white font-w-6">Sign Out</li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -48,7 +49,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <h5 class="page-title pull-left">Crafts I've listed on Wedo</h5>
+          <h5 class="page-title pull-left">My Open Project</h5>
           <h5 class="page-title pull-right"><i class="fa fa-angle-left c-pink-lt"></i>&#09;2 of 15&#09;<i class="fa fa-angle-right c-pink-lt"></i></h5>
         </div>
       </div>
@@ -57,16 +58,16 @@
 
       <div class="row">
         <div class="col-sm-12">
-          <h1 class="page-title pull-left">My Wedding Favors</h1>
+          <h1 class="page-title pull-left">Stone Garden Favors</h1>
         </div>
       </div>
 
       <div class="row">
         <img src="assets/planner-project-detail/craft.png" class="col-sm-3">
         <div class="col-sm-9">
-          <p><span class="font-t-u font-w-2 small"><i class="fa fa-archive"></i> Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-usd"></i> Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-gift"></i> No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-calendar"></i> Due By</span>: 4/16/2016 </p>
-          <p><span class="font-t-u font-w-2 small">Description</span>: I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
-          <p><span class="font-t-u font-w-2 small">Instructions</span>: <a href="https://www.pinterest.com/pin/225743000043742044/">https://www.pinterest.com/pin/225743000043742044/</a></p>
+          <p><span class="font-t-u small"><i class="fa fa-archive"></i> Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u  small"><i class="fa fa-usd"></i> Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u  small"><i class="fa fa-gift"></i> No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u  small"><i class="fa fa-calendar"></i> Due By</span>: 4/16/2016 </p>
+          <p><span class="font-t-u  small">Description</span>: I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
+          <p><span class="font-t-u  small">Instructions</span>: <a href="https://www.pinterest.com/pin/225743000043742044/">https://www.pinterest.com/pin/225743000043742044/</a></p>
       </div>
 
      </div>
@@ -103,8 +104,8 @@
                     <td><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i></td>
                     <td><a href="/https://www.google.com/">3</td>
                     <td><ul class="list-unstyled list-inline pull-left">
-                              	<li><button type="submit" class="btn btn-default">Accept</button></li>
-                                <li><button type="submit" class="btn btn-default">Accept</button></li>
+                              	<li><a href="index.html" type="submit" class="btn btn-default">Accept</a></li>
+                                <li><a href="index.html" type="submit" class="btn btn-default">Reject</a></li>
                             </ul>
                     </td>
                 </tr>
@@ -114,7 +115,7 @@
                     <td><a href="/https://www.google.com/">10</td>
                     <td><ul class="list-unstyled list-inline pull-left">
                               	<li><button type="submit" class="btn btn-default">Accept</button></li>
-                                <li><button type="submit" class="btn btn-default">Accept</button></li>
+                                <li><button type="submit" class="btn btn-default">Reject</button></li>
                             </ul>
                     </td>
                 </tr>
@@ -124,7 +125,7 @@
                     <td><a href="/https://www.google.com/">41</td>
                     <td><ul class="list-unstyled list-inline pull-left">
                               	<li><button type="submit" class="btn btn-default">Accept</button></li>
-                                <li><button type="submit" class="btn btn-default">Accept</button></li>
+                                <li><button type="submit" class="btn btn-default">Reject</button></li>
                             </ul>
                     </td>
                 </tr>
