--- a/planner_summary.html
+++ b/planner_summary.html
@@ -37,7 +37,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <a class="navbar-brand" href="index.html"><img src="images/logo-sm.png" alt="" class="header__logo"></a>
           <ul class="list-unstyled list-inline pull-right">
-            <li><h6>Profile</h6></li>
+                       <li class="c-white font-w-6">Profile</li>
+            <li class="c-white font-w-6">Sign Out</li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -115,7 +116,6 @@
                    <p><span class="font-t-u small"><i class="fa fa-archive"></i> Category</span>: Flowers <span class="v-divider">|</span> <span class="font-t-u  small"><i class="fa fa-usd"></i> Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u small"><i class="fa fa-gift"></i> No. of Items</span>: 10 <span class="v-divider">|</span> <span class="font-t-u small"><i class="fa fa-calendar"></i> Due By</span>: 4/18/2016
                   <p class="mt-0"><a href="planner_project_detail.html" class="see-details">See details</a></p>
                  </div>
-                </h4>
               </div>
           </div>
           <div id="collapseDetail" class="panel-collapse collapse">
