Photos on open projects

--- a/open-projects.html
+++ b/open-projects.html
@@ -91,7 +91,7 @@
             <h4 class="panel-title">
                <div class="media">
                   <div class="media-left">
-                      <img src="http://placehold.it/75x75" class="">
+                    <img src="assets/open-projects/open-projects-1.png" class="media-sq-img-75">
                   </div>
                   <div class="media-body align-m">
                      <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Alice's Wedding Favors</h4></a>
@@ -112,7 +112,7 @@
           <h4 class="panel-title">
              <div class="media">
                 <div class="media-left">
-                    <img src="http://placehold.it/75x75" class="">
+                    <img src="assets/open-projects/open-projects-2.png" class="media-sq-img-75">
                 </div>
                 <div class="media-body align-m">
                    <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Priya's Invitations</h4></a>
@@ -132,7 +132,7 @@
         <h4 class="panel-title">
            <div class="media">
               <div class="media-left">
-                  <img src="http://placehold.it/75x75" class="">
+                  <img src="assets/open-projects/open-projects-3.png" class="media-sq-img-75">
               </div>
               <div class="media-body align-m">
                  <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Tai's Wedding Favors</h4></a>
@@ -152,7 +152,7 @@
       <h4 class="panel-title">
          <div class="media">
             <div class="media-left">
-                <img src="http://placehold.it/75x75" class="">
+                <img src="assets/open-projects/open-projects-4.png" class="media-sq-img-75">
             </div>
             <div class="media-body align-m">
                <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Alan's Centerpieces</h4></a>
@@ -173,7 +173,7 @@
     <h4 class="panel-title">
        <div class="media">
           <div class="media-left">
-              <img src="http://placehold.it/75x75" class="">
+              <img src="assets/open-projects/open-projects-5.png" class="media-sq-img-75">
           </div>
           <div class="media-body align-m">
              <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Brooklyn's Necklaces</h4></a>
@@ -195,7 +195,7 @@
     </div>
 </section>
   <!-- End Content Here-->
-<footer id="footer">
+<footer id="footer" class="cream-bg">
   <div class="container">
     <ul class="list-inline social pull-left">
                 <li>
