--- a/maker_project_detail.html
+++ b/maker_project_detail.html
@@ -69,6 +69,8 @@
             <p><span class="font-t-u font-w-2 small"><i class="fa fa-archive"></i> Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-usd"></i> Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-gift"></i> No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-calendar"></i> Due By</span>: 4/16/2016 </p>
             <p><span class="font-t-u font-w-2 small">Description</span>: I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
             <p><span class="font-t-u font-w-2 small">Instructions</span>: <a href="https://www.pinterest.com/pin/225743000043742044/">https://www.pinterest.com/pin/225743000043742044/</a></p>
+
+          <p class="mt-30"><button type="submit" class="btn btn-primary">Bid on this project</button></p>
           </div>
         </div>
     </div>
@@ -78,12 +80,10 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <a href="/https://www.pinterest.com/">Ask a question</a>&nbsp;
-          <button type="submit" class="btn btn-primary">Bid on this project</button>
+            <a href="/https://www.pinterest.com/">Ask a question</a>&nbsp;
         </div>
       </div>
     </div>
-</div>
 </section>
 
 <br><br>
